# gopost-qt

./: .gitignore  GOPOST_APP_FEATURES.md  GOPOST_ARCHITECTURE.md  GOPOST_SPRINT_PLAN.md  README.md  docker-compose.yml
gopost_app_qt/: .gitignore  CMakeLists.txt  CMakeLists_test.cmake  test_decoder.cpp
gopost_app_qt/qml/: Main.qml
gopost_app_qt/qml/auth/screens/: LoginScreen.qml  RegisterScreen.qml
gopost_app_qt/qml/auth/widgets/: LoginRequiredSheet.qml  SocialLoginButtons.qml
gopost_app_qt/qml/core/navigation/: MainShell.qml
gopost_app_qt/qml/core/theme/: NeonGlow.qml
gopost_app_qt/qml/go_craft/screens/: GoCraftScreen.qml
gopost_app_qt/qml/image_editor/screens/: ExportScreen.qml  ImageEditorScreen.qml  TemplateCustomizationScreen.qml
gopost_app_qt/qml/image_editor/widgets/: AdjustmentPanel.qml  CanvasPreview.qml  CropPanel.qml  EditorToolbar.qml  FilterPanel.qml  LayerPanel.qml  MaskPanel.qml  PhotoPickerSheet.qml  SaveAsTemplateDialog.qml  StickerPickerSheet.qml  TextToolPanel.qml  TransformHandle.qml  TransformOverlay.qml
gopost_app_qt/qml/template_browser/screens/: BrowseScreen.qml  HomeScreen.qml  TemplateDetailScreen.qml
gopost_app_qt/qml/template_browser/widgets/: CategoryChips.qml  FilterBar.qml  PreviewPlayer.qml  SearchBarWidget.qml  ShimmerLoading.qml  TemplateCard.qml
gopost_app_qt/qml/video_editor/screens/: ProjectListScreen.qml  VideoEditorScreen.qml  VideoExportScreen.qml  VideoTemplateCustomizationScreen.qml
gopost_app_qt/qml/video_editor/widgets/: AdjustmentClipPainter.qml  AdjustmentLayerPanel.qml  AudioControlsPanel.qml  ClipInspectorPanel.qml  ClipWidget.qml  ColorGradingPanel.qml  CropTransformPanel.qml  DockSystem.qml  EditorSidebar.qml  EffectsPanel.qml  KeyframeEditor.qml  MarkersPanel.qml  MediaPoolPanel.qml  Playhead.qml  ResizableSplit.qml  SaveAsVideoTemplateDialog.qml  SpeedControlsPanel.qml  TextEditorPanel.qml  TimeRuler.qml  TimelinePanel.qml  TrackWidget.qml  TransitionPicker.qml  VideoPreviewPanel.qml  VideoToolbar.qml
gopost_app_qt/qml/video_editor_2/screens/: VideoEditor2Screen.qml
gopost_app_qt/qml/video_editor_2/widgets/: VE2EditorSidebar.qml  VE2MediaPoolPanel.qml  VE2PreviewPanel.qml  VE2PropertyPanel.qml  VE2TimelinePanel.qml  VE2TimelineToolbar.qml  VE2Toolbar.qml
gopost_app_qt/resources/: gopost.rc  qml.qrc
gopost_app_qt/shaders/: colorgrading.frag
gopost_app_qt/src/: app.cpp  app.h  main.cpp
gopost_app_qt/src/auth/: CMakeLists.txt
gopost_app_qt/src/core/: CMakeLists.txt
gopost_app_qt/src/core/cache/: image_cache_manager.cpp  image_cache_manager.h
gopost_app_qt/src/core/config/: app_environment.cpp  app_environment.h  config_layer.cpp  config_layer.h  config_schema.cpp  config_schema.h  config_value.h  configuration_engine_new.cpp  configuration_engine_new.h  layered_config_store.cpp  layered_config_store.h  schema_migrator.cpp  schema_migrator.h
gopost_app_qt/src/core/constants/: api_constants.h
gopost_app_qt/src/core/di/: service_locator.cpp  service_locator.h
gopost_app_qt/src/core/diagnostics/: boot_info_provider.cpp  boot_info_provider.h  diagnostic_engine.cpp  diagnostic_engine.h  frame_timer.cpp  frame_timer.h  high_res_timer.h  overlay_data_provider.cpp  overlay_data_provider.h  performance_snapshot.h  scope_profiler.cpp  scope_profiler.h
gopost_app_qt/src/core/engines/: configuration_engine.cpp  configuration_engine.h  core_engine.h  diagnostics_engine.cpp  diagnostics_engine.h  event_bus_engine.cpp  event_bus_engine.h  logging_engine.cpp  logging_engine.h  memory_management_engine.cpp  memory_management_engine.h  platform_capability_engine.cpp  platform_capability_engine.h
gopost_app_qt/src/core/error/: exceptions.h  failures.cpp  failures.h
gopost_app_qt/src/core/events/: CoreEvents.h  event_bus_engine_new.cpp  event_bus_engine_new.h  immediate_dispatcher.h  queued_delivery_bridge.cpp  queued_delivery_bridge.h  subscription_registry.cpp  subscription_registry.h
gopost_app_qt/src/core/import/: media_import_engine.cpp  media_import_engine.h
gopost_app_qt/src/go_craft/: CMakeLists.txt
gopost_app_qt/src/image_editor/: CMakeLists.txt
gopost_app_qt/src/rendering_bridge/: CMakeLists.txt  engine_api.h  engine_types.h  image_editor_engine_native.cpp  image_editor_engine_native.h  qprocess_video_decoder.cpp  qprocess_video_decoder.h  render_decode_thread.cpp  render_decode_thread.h  stub_image_editor_engine.cpp  stub_image_editor_engine.h  stub_video_timeline_engine.cpp  stub_video_timeline_engine.h  template_bridge.cpp  template_bridge.h  video_timeline_engine_native.cpp  video_timeline_engine_native.h
gopost_app_qt/src/template_browser/: CMakeLists.txt
gopost_app_qt/src/video_editor/: CMakeLists.txt
gopost_app_qt/tests/bridges/: TestBridge.cpp  TestBridge.h
gopost_app_qt/tests/config/: TestConfigStore.cpp  TestConfigStore.h
gopost_app_qt/tests/diagnostics/: TestDiagnostics.cpp  TestDiagnostics.h
gopost_app_qt/tests/eventbus/: TestEventBus.cpp  TestEventBus.h
gopost_app_qt/tests/import/: TestImport.cpp  TestImport.h
gopost_app_qt/tests/io/: TestIO.cpp  TestIO.h
gopost_app_qt/tests/logging/: TestLogger.cpp  TestLogger.h
gopost_app_qt/tests/memory/: TestMemoryBudget.cpp  TestMemoryBudget.h
gopost_app_qt/tests/mmap/: TestMmap.cpp  TestMmap.h
gopost_app_qt/tests/permissions/: TestPermissions.cpp  TestPermissions.h
gopost_app_qt/tests/platform/: TestPlatformCapability.cpp  TestPlatformCapability.h
gopost_app_qt/tests/storage/: TestStorage.cpp  TestStorage.h
native/: CMakeLists.txt  CMakePresets.json  gopost_native.podspec
native/gopost_core/: CMakeLists.txt
native/gopost_image_engine/: CMakeLists.txt
native/gopost_video_engine/: CMakeLists.txt
native/scripts/: setup_ffmpeg_android.sh  setup_ffmpeg_desktop.sh
native/tests/: test_allocator.cpp  test_artistic_filters.cpp  test_canvas.cpp  test_crypto.cpp  test_decode_thread.cpp  test_gpu_context.cpp  test_graphics_backend_mock.cpp  test_image_codec.cpp  test_playback_controller.cpp  test_ring_frame_buffer.cpp  test_template_parser.cpp  test_thread_pool.cpp  test_video_engine.cpp
(+591 files in other folders)
